# pytest-click

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.rst  mypy.ini  pyproject.toml  setup.py  tox.ini
.github/workflows/: build.yml  release.yml
pytest_click/: __init__.py  fixtures.py
src/pytest_click/: __init__.py  fixtures.py
test/: conftest.py  test_plugin.py
test/fixtures/: test_cli_runner.py  test_isolated_cli_runner.py
tests/: conftest.py  test_plugin.py
tests/fixtures/: test_cli_runner.py  test_isolated_cli_runner.py
