[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target_version = ["py38"]

[tool.isort]
line_length = 120
multi_line_output = 3
default_section = "THIRDPARTY"
include_trailing_comma = true
known_first_party = "pytest_click"
known_third_party = ["_pytest", "click", "pytest", "setuptools"]
